--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,6 @@
    General Styles
    Global Footer
    Social Media Icons
-   Main Carousel
-   OWL Carousel - Locations
-   OWL Carousel - Events
    Banner
    Block Styles
    Library Logo
@@ -137,13 +134,6 @@ img{
 	padding-right: 1em;
 }
 
-@media (max-width: 750px) {
-.anniversary-logo img {
-	padding-top: 25px;
-	padding-bottom: 10px;
-  }
-}
-
 
 
  /**
@@ -157,7 +147,7 @@ img{
 .social ul li a.facebook,
 .social ul li a.twitter,
 .social ul li a.youtube,
-.social ul li a.pinterest{
+.social ul li a.instagram{
     display: block; 
     height: 45px;
     width: 45px;
@@ -195,11 +185,11 @@ img{
 	background-position: -46px -92px; 
 }
 
-.social ul li a.pinterest{ 
+.social ul li a.instagram{ 
 	background-position: 0 -276px; 
 }
 
-.social ul li a.pinterest:hover{ 
+.social ul li a.instagram:hover{ 
 	background-position: -46px -276px; 
 }
 
@@ -207,161 +197,6 @@ img{
 	float: left;
 }
 
-
-
- /**
- * Main Carousel
- */
- 
-.carousel-inner     {
-	border:0px solid #000000;
-	width: 100%;
-}
-
-.carousel-inner img{
-	height: auto;
-    max-width: 100%;
-}
-
-
-
-/**Fade Effect*/
-
-.carousel-inner .item {
-  left: 0 !important;
-  -webkit-transition: opacity .8s;
-     -moz-transition: opacity .8s;
-       -o-transition: opacity .8s;
-          transition: opacity .8s;
-}
-
-.carousel-inner .item.next.left,
-.carousel-inner .item.prev.right {
-    opacity: 1;
-    z-index: 1;
-}
-.carousel-inner .item.active.left,
-.carousel-inner .item.active.right {
-    opacity: 0;
-    z-index: 2;
-}
-
-
-
- /**
- * OWL Carousel - Locations
-*/
-
-.locations-carousel{
-	margin-top: 30px;
-	margin-bottom: 30px;
-	padding: 10px;
-	background-color: #f0f0f0;
-	text-align: center;
-	border-top: 10px solid #cecece;
-	border-bottom: 10px solid #cecece;
-}
-
-.locations-carousel img{
-	padding: 4px;
-}
-
-#owl-carousel-page72 .owl-item img{
-	border: 1px solid #cecece;
-	border-radius: 5px;
-	box-shadow: 2px 2px 4px #c2c2c2;
-	width: 100%;
-	height: auto;
-	padding: 3px;
-	background-color: #fff;
-}
-
-.owl-item{
-	padding: 7px;
-}
-
-#owl-carousel-page72 .owl-controls{
-	background-color: #f0f0f0;
-}
-
-#owl-carousel-page72 .owl-wrapper-outer{
-	background-color: #f0f0f0;
-}
-
-#owl-carousel-page72{
-	background-color: #f0f0f0;
-}
-
-
-
- /**
- * OWL Carousel - Events
- */
- 
- #owl-carousel-block40 .owl-item{
-	margin: 3px;
-	background-color: #fff;
-}
-
-#owl-carousel-attachment-144 .owl-item{
-	margin: 3px;
-	background-color: #fff;
-}
-
-.pane-event-carousel{
-	background-color: #fff;
-	border-radius: 10px 10px 0 0;
-	border-top: 1px solid #c9c9c9;
-	border-left: 1px solid #c9c9c9;
-	border-right: 1px solid #c9c9c9;
-	box-shadow: 2px 2px 4px #eaeaea;
-	border-bottom: 10px solid #cececc;
-	padding: 10px;
-	margin-bottom: 25px;
-}
-
-.pane-event-carousel-title a{
-	font-weight: bold;
-	font-family: "Arial Black", Gadget, sans-serif;
-	color: #77092c;
-}
-
-.pane-event-carousel-title a:hover{
-	font-weight: bold;
-	color: #48051a;
-}
-
-h2.pane-event-carousel-date{
-	background-color: #707070;
-	border-radius: 4px;
-	font-weight: bold; 
-	font-family: "Arial Black", Gadget, sans-serif;
-	color: #fff;
-	padding: 5px;
-	font-size: 1.75em;	
-}
-
-.owl-theme .owl-controls .owl-buttons div {
-	color: #FFF;
-	background: #2ab1e0;
-}
-
-.events-carousel-footer{
-	background-color: #fff;
-	font-family: 'Roboto Slab', serif;
-	border-radius: 5px;
-	border: 0px solid #cecece;
-	text-align: center;
-	padding: 5px;
-}
-
-#owl-carousel-block40 .owl-wrapper-outer{
-	background-color: #fff;
-}
-
-#owl-carousel-attachment-144 .owl-wrapper-outer{
-	background-color: #fff;
-}
 
 
  
@@ -876,34 +711,6 @@ div.login input.form-control { /*login styling */
  
 form.webform-client-form .radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
     float: none;
-}
-
-
-
- 
-/**
-* Document Registry
-*/
-
-.doc_header {
-    border-top: 1px dashed #cecece;
-	background-color: #f9f9f9;
-	border-radius: 5px;
-	padding: 5px 0px 0px 5px;
-	font-weight:bold;
-}
-.doc_row {
-	background-color: #f9f9f9;
-	border-radius: 5px;
-	padding: 0px 5px 5px 5px;
-	margin-bottom:0px;
-}
-.doc_footer {
-	background-color: #f9f9f9;
-	border-radius: 5px;
-	padding: 0px 5px 0px 5px;
-	margin-bottom:5px;
-	border-bottom: 1px dashed #cecece;
 }
 
 
