--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 html,body{
     height: 100%;
 	background-color: #fff;
-	font-family: Verdana; 
+	font-family: 'Droid Sans'; 
 }
 
 #body{
@@ -48,7 +48,6 @@ h1.page-header {
 	background-color: #2c2c2c;
 	border-radius: 5px 5px 5px;
 	text-transform: uppercase;
-	font-family: Tahoma, Geneva, sans-serif;
 }
 
 .container-fluid {
@@ -78,10 +77,6 @@ a:hover, a:focus {
     text-decoration: underline;
 }
 
-.view-footer{
-	font-family: 'Roboto Slab', serif;
-}
-
 .btn .glyphicon {
 	color: #fff;
 }
@@ -109,7 +104,6 @@ img{
 	border-top: 7px solid #1f1f1f;
 	min-height: 100%; 
     width: 100%;
-	font-family: Verdana, Geneva, sans-serif;
 	margin-top:0;
 }
 
@@ -223,7 +217,6 @@ img{
  */
 
 .block-title{
-	font-family: 'Roboto Slab', serif;
 	font-weight: bold;
 	text-transform: uppercase;
 	color: #3e3e3e;
@@ -251,9 +244,8 @@ img{
 .navbar {
 	background-color:#3d3d3d;
 	font-size: 1.1em;
-	font-family: Gill Sans MT, sans-serif;
+	font-family: 'Droid Sans';
 	font-weight: bold;
-	text-transform: uppercase;
 	letter-spacing: .05em;
 	width: 100%;
 	border-radius: 0;
@@ -391,6 +383,27 @@ img{
 	margin:0px 50px 0px 30px;
 }
 
+.navbar-brand{
+	font-size: 1.20em;
+	color: #fff;
+	background-color: #1c1c1c;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+	-webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.navbar-brand:hover{
+	color: #fff;
+	background-color: #1c1c1c;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+	-webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
 
 
  /**
@@ -436,7 +449,6 @@ ul.menu.nav{
 }
 
 .libfooter h2 { /* Acts as h2 block-title tag*/
-	font-family: 'Roboto Slab', serif;
 	text-transform: uppercase;
 	font-weight: bold;
 	color: #fff;
@@ -477,7 +489,6 @@ ul.menu.nav{
 }
 
 h2.pane-title{
-	font-family: 'Roboto Slab', serif;
 	text-transform: uppercase;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 	color: #fff;
@@ -512,14 +523,12 @@ h1 {
 	font-size: 2em;
 	font-weight: bold;
 	margin-bottom: 10px;
-	font-family: 'Roboto Slab', serif;
 }
 
 h3 {
 	font-size: 1.5em;
 	font-weight: bold;
 	margin-bottom: 5px;
-	font-family: 'Roboto Slab', serif;
 	color: #5b5b5b;
 	background-color: #efefef;
 	border-radius: 5px;
@@ -527,14 +536,7 @@ h3 {
 }
 
 h4 {
-	font-family: 'Roboto Slab', serif;
 	font-weight: bold;
-}
-
-.eref h4  a{
-	font-family: 'Roboto Slab', serif;
-	font-weight: bold;
-	color: #303030;
 }
 
 
