--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,7 @@ img{
     -moz-transition: all 0.3s linear;
     -o-transition: all 0.3s linear;
     transition: all 0.3s linear;
+	height: 60px;
 }
 
 .navbar-brand:hover{
@@ -402,6 +403,11 @@ img{
     -moz-transition: all 0.3s linear;
     -o-transition: all 0.3s linear;
     transition: all 0.3s linear;
+}
+
+.navbar-default .navbar-brand {
+    color: #fff;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 }
 
 
@@ -725,7 +731,6 @@ form.webform-client-form .radio input[type="radio"], .radio-inline input[type="r
 }
 
 h2{
-	font-family: 'Roboto Slab', serif;
 	font-weight: bold;
 }
 
