--- a/css/style.css
+++ b/css/style.css
@@ -257,35 +257,6 @@ img{
 	-o-box-shadow: 0px 5px 5px #bbb;
 }
 
-.navbar-brand{
-	font-size: 1.20em;
-	height: 60px;
-	color: #fff;
-	background-color: #1c1c1c;
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-	-webkit-transition: all 0.3s linear;
-    -moz-transition: all 0.3s linear;
-    -o-transition: all 0.3s linear;
-    transition: all 0.3s linear;
-}
-
-.navbar-brand:hover{
-	color: #fff;
-	background-color: #1c1c1c;
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-	-webkit-transition: all 0.3s linear;
-    -moz-transition: all 0.3s linear;
-    -o-transition: all 0.3s linear;
-    transition: all 0.3s linear;
-}
-
-.navbar-default .navbar-brand {
-    color: #fff;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-	height: 60px;
-}
-
-
 /* responsive text queries */
 @media screen and (max-width: 992px) {
 .navbar {
@@ -397,8 +368,6 @@ img{
 
 @media (min-width: 768px) {
     .navbar .navbar-nav {
-        display: inline-block;
-        float: none;
         vertical-align: top;
     }
 
@@ -409,6 +378,35 @@ img{
 
 .region-site-name {
 	margin:0px 50px 0px 30px;
+}
+
+.navbar-default .navbar-brand{
+	color: #fff;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+}
+
+.navbar-brand{
+	font-family: 'Droid Sans';
+	font-size: 1.20em;
+	color: #fff;
+	background-color: #1c1c1c;
+	line-height: 20px;
+	padding: 15px 15px 40px 15px;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+	-webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.navbar-brand:hover{
+	color: #fff;
+	background-color: #1c1c1c;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+	-webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
 }
 
 
