--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,15 @@ a:hover, a:focus {
 img{
 	height: auto;
     max-width: 100%;
+}
+
+.center{
+	text-align: center;
+}
+
+
+.welcome-message{
+	padding: 10px;
 } 
 
  
@@ -391,6 +400,7 @@ img{
 	color: #fff;
 	background-color: #1c1c1c;
 	line-height: 20px;
+	height: 60px;
 	padding: 15px 15px 40px 15px;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 	-webkit-transition: all 0.3s linear;
